@@ -4,7 +4,7 @@ Description: Portfolio Press is a responsive theme for showcasing your photograp
 Author: Devin Price
 Author URI: http://wptheming.com/
 Theme URI: http://wptheming.com/portfolio-theme/
-Version: 1.9dev
+Version: 1.9
 License: GNU General Public License
 License URI: license.txt
 Tags: white, black, gray, two-columns, left-sidebar, right-sidebar, flexible-width, custom-menu, full-width-template, microformats, post-formats, theme-options, translation-ready
@@ -198,6 +198,7 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 #logo {
 	float:left;
 	max-width: 100%;
+	line-height:1;
 }
 #logo #site-title {
 	font-family: 'Rokkitt', sans-serif;
@@ -206,7 +207,6 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 #logo #site-title a {
 	color:#fff;
 	font-size:44px;
-	line-height:1;
 	text-decoration:none;
 }
 #logo #site-title img {
@@ -635,7 +635,7 @@ object {
 	font-size:16px;
 	font-weight:bold;
 	position: absolute;
-	top: 35%;
+	top: 45%;
 	left: 0;
 	padding: 1em 5%;
 	width: 90%;
@@ -1106,6 +1106,15 @@ h3#pings {
 		clear:none;
 		padding: 0;
 		margin-top:18px;
+	}
+	.clear-menu #branding {
+		padding: 25px 0 10px;
+	}
+	.clear-menu .primary-navigation {
+		clear:both;
+		float:none;
+		margin:0 0 0 -15px;
+		padding:15px 0 0;
 	}
 	.primary-navigation .menu-toggle {
 		display: none;
